@@ -1,3 +1,7 @@
+2005-08-18  Rodrigo Moya <rodrigo@novell.com>
+
+	* drw-break-window.c (drw_break_window_dispose): fixed leaked timer.
+
 2005-02-04  Richard Hult  <richard@imendio.com>
 
 	* drwright.c: Revert the patch from below since it fixes #134595
